app/style/components/guest-mode-toggle.less
/*
 * Wire
 * Copyright (C) 2018 Wire Swiss GmbH
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see http://www.gnu.org/licenses/.
 *
 */

guest-mode-toggle {
  display: flex;
  flex-direction: column;

  .guest-mode-toggle-row {
    font-size: 16px;
    display: flex;
    justify-content: space-between;
    height: 36px;
    border-bottom: 1px solid fade(@graphite-dark, 8%);
  }

  .guest-mode-toggle-info {
    margin-top: 16px;
    font-size: 12px;
    color: fade(@graphite-dark, 40%);
  }

  .slider.disabled {
    pointer-events: none;
    opacity: 0.7;
  }
}

